# linux-ipc

./: CMakeLists.txt  QUESTION.md  README.md
communication/: CMakeLists.txt
communication/data-transfer/: CMakeLists.txt
communication/data-transfer/byte-stream/: CMakeLists.txt
communication/data-transfer/byte-stream/FIFO/: CMakeLists.txt  fifo-client.c  fifo-header.h  fifo-server.c
communication/data-transfer/byte-stream/pipe/: CMakeLists.txt  pipe-connected-to-filter.c  pipe-transfer-data.c
communication/data-transfer/message/: CMakeLists.txt
communication/data-transfer/message/datagram-socket/: CMakeLists.txt  README.md  datagram-socket-header.h  inet-datagram-socket-echo-client.c  inet-datagram-socket-echo-server.c  unix-datagram-sock-client.c  unix-datagram-socket-server.c
communication/data-transfer/pseudoterminal/: CMakeLists.txt  unbuffer.c
communication/shared-memory/POSIX-shared-memory/: CMakeLists.txt  posix-shm-header.h
communication/shared-memory/System-V-shared-memory/: CMakeLists.txt  spooler.c  sysv-shm-header.h
synchronization/condition-variable-threads/: CMakeLists.txt  README.md  cond-variable-thread.c
synchronization/file-lock/: README.md
synchronization/file-lock/file-lock-flock/: CMakeLists.txt  ipc-flock.c
synchronization/file-lock/recored-lock-fcntl/: CMakeLists.txt  recorded-lock-fcntl.c
synchronization/mutex-threads/: CMakeLists.txt  mutex-threads.c
synchronization/semaphore/POSIX-semaphore/: README.md
synchronization/semaphore/System-V-semaphore/: CMakeLists.txt  client.c
(+33 files in other folders)
